--- a/package.json
+++ b/package.json
@@ -181,5 +181,10 @@
     "util": "^0.12.3",
     "values.js": "^2.1.1",
     "zustand": "^4.3.3"
-  }
+  },
+  "browserslist": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
+  ]
 }
