--- a/package.json
+++ b/package.json
@@ -97,6 +97,9 @@
     "modern-screenshot": "^4.4.15",
     "module-alias": "^2.2.2",
     "mongodb": "^5.7.0",
+    "mysql": "^2.18.1",
+    "util": "0.12.5",
+    "php-serialize": "^4.1.1",
     "multer": "^1.4.5-lts.1",
     "nai-js-tokenizer": "1.0.1",
     "needle": "^3.2.0",
@@ -124,6 +127,8 @@
     "@types/chai": "^4.3.4",
     "@types/chance": "^1.1.3",
     "@types/cors": "^2.8.13",
+    "@types/mysql": "^2.15.21",
+    "@types/php-serialize": "3.0.1",
     "@types/dompurify": "^3.0.2",
     "@types/express": "^4.17.17",
     "@types/google-publisher-tag": "^1.20230410.0",
