fix: update for getting

--- a/package.json
+++ b/package.json
@@ -111,7 +111,8 @@
     "throng": "^5.0.0",
     "uuid": "^9.0.0",
     "wikijs": "^6.4.1",
-    "ws": "^8.12.1"
+    "ws": "^8.12.1",
+    "axios": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -144,6 +145,7 @@
     "@types/throng": "^5.0.4",
     "@types/uuid": "^9.0.0",
     "@types/ws": "^8.5.4",
+    "@types/axios": "^0.9.35",
     "assert": "^2.0.0",
     "babel-preset-solid": "^1.6.9",
     "browserify-zlib": "^0.2.0",
